[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/story_teller/custom_types/DialogArea.gd" type="Script" id=1]
[ext_resource path="res://addons/story_teller/custom_types/CommandArea.gd" type="Script" id=2]
[ext_resource path="res://scenes/TestScene.gd" type="Script" id=3]

[node name="TestScene" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ST_DialogArea" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 422.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ST_CommandArea" type="LineEdit" parent="VBoxContainer"]
margin_top = 426.0
margin_right = 800.0
margin_bottom = 450.0
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 2 )
